# mesofact

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.ssr-runtime  LICENSE-MIT  package.json  release-plz.toml  rust-toolchain.toml
.github/workflows/: publish-smoke.yml  release-plz.yml
.yah/: .gitignore  AGENTS.md  CLAUDE.md  agent-approval-rules.json  camp-setup.json  camp.toml  claude-spawn-settings.json  quests.md
.yah/board/archive/: R008.jsonl  R013.jsonl
.yah/db/: gnome_queue.turso-wal  task-runs.turso-wal  task-sessions.turso-wal
.yah/docs/architecture/: mesofact-noisetable-case-study.md  mesofact-yah-case-study.md  mesofact.md  noisetable-data-tiers.md
.yah/docs/working/: almanac.md  mesofact.md
.yah/qed/: release-build.toml
.yah/subclasses/: bundle-anthropic-cleric-golden-cloak.json  bundle-anthropic-cleric-primary.json  bundle-anthropic-thief-golden-cloak.json  bundle-anthropic-thief-primary.json  bundle-anthropic-warrior-golden-cloak.json  bundle-anthropic-warrior-primary.json  bundle-anthropic-wizard-golden-cloak.json  bundle-anthropic-wizard-primary.json  bundle-ollama-local-cleric-primary.json  bundle-ollama-local-thief-primary.json  bundle-ollama-local-warrior-primary.json
.yah/summaries/: Q002-1778863290.md
.yah/working-set/: bundle-anthropic-ashguard.json  bundle-anthropic-miravel.json  bundle-anthropic-quill.json  custom:1779382972522.json  custom:1779908933598.json
crates/mesofact/: Cargo.toml  README.md
crates/mesofact-app/: Cargo.toml
crates/mesofact-app/src/: lib.rs
crates/mesofact-build/: Cargo.toml
crates/mesofact-build/js/: runtime_shim.js
crates/mesofact-build/src/: assets.rs  bundle.rs  bundle_assemble.rs  check.rs  config.rs  css.rs  data.rs  diff.rs  install.rs  js.rs  legacy.rs  lib.rs  manifest_build.rs  pipeline.rs  prerender.rs  render.rs  route_config.rs  sitemap.rs  source_infer.rs  ssr_prefix.rs  tag_index.rs
crates/mesofact-build/tests/: pipeline.rs  render.rs
crates/mesofact-dev/: Cargo.toml
crates/mesofact-dev/src/: lib.rs  main.rs  proxy.rs  revalidate.rs  s3.rs  serve.rs  ssr.rs  ssr_wrapper.ts  tenants.rs  watcher.rs
crates/mesofact-publisher/: Cargo.toml  README.md
crates/mesofact-publisher/src/: cdn.rs  cloudflare.rs  config.rs  lib.rs  object_store.rs  pointer.rs  publish.rs  s3.rs
crates/mesofact-publisher/tests/: cli_smoke.rs  in_memory.rs
crates/mesofact-render/: Cargo.toml
crates/mesofact-render/src/: data.rs  lib.rs  render.rs  route_config.rs  route_key.rs
crates/mesofact-ssr/: Cargo.toml
crates/mesofact-ssr/js/: bootstrap.js  harness.js  runtime_shim.js  ssr_bootstrap.js  ssr_harness.js
crates/mesofact-ssr/src/: lib.rs  ssg.rs  ssr.rs
crates/mesofact/src/: lib.rs  manifest.rs  validate.rs
crates/mesofact/src/proxy/: cache.rs  config.rs  manifest_loader.rs  metrics.rs  mod.rs  router.rs  session.rs  source_gen.rs  trace.rs  worker_client.rs  worker_pool.rs
crates/mesofact/tests/: fixtures.rs  proxy.rs  worker.rs
crates/mesofact/tests/worker_stubs/: counter.ts  hello.ts  slow.ts  trace_echo.ts  user_echo.ts
examples/yah-dev/: mesofact.config.toml  mesofact.routes.ts  package.json  tsconfig.json
examples/yah-dev/src/: app.client.ts  app_shell.ts  layout.ts  not_found.ts  render.ts
scripts/: smoke-outside-consumer.sh  smoke-yah-dev.sh
tests/fixtures/manifests/: README.md  accept_minimal.json  accept_mixed_modes.json  reject_mode1_requires_user.json  reject_mode1_scoped_source.json  reject_unsupported_version.json
