# mesofact is its own Cargo workspace — it lives under yah/external/ during
# early iteration but is intended to move to its own repo. yah's `.gitignore`
# excludes `external/`, so this tree carries independent git history.
[workspace]
members = [
    "crates/mesofact",
    "crates/mesofact-publisher",
    "crates/mesofact-dev",
    "crates/mesofact-build",
    "crates/mesofact-ssr",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["yah Dev <human@yah.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yah-ai/mesofact"
