# mesofact is its own Cargo workspace — it lives under yah/external/ during
# early iteration but is intended to move to its own repo. yah's `.gitignore`
# excludes `external/`, so this tree carries independent git history.
[workspace]
members = [
    "crates/mesofact",
    "crates/mesofact-publisher",
    "crates/mesofact-dev",
    "crates/mesofact-build",
    "crates/mesofact-ssr",
]
resolver = "2"

# The shipped framework binary statically links V8 (~139MB librusty_v8.a);
# stripping symbols cuts the release binary from ~75MB to ~57MB (R449-T4).
[profile.release]
strip = true

[workspace.package]
version = "0.8.16"
edition = "2021"
authors = ["yah Dev <human@yah.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yah-ai/mesofact"
