# Rust-native mesofact build pipeline (W174 / Q445). Parallel implementation
# of packages/mesofact-build: Rolldown bundling + LightningCSS + asset
# pipeline + deno_core SSG, plus a minimal lockfile-driven npm installer
# (pacquet was retired upstream — see W174 amendment). The Rust-native
# pipeline is the sole build path; the Bun `--legacy-bun` escape hatch and
# its equivalence-diff harness were removed at R450-T4.

[package]
name = "mesofact-build"
description = "Rust-native build pipeline for mesofact workloads (Rolldown + LightningCSS + deno_core SSG)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mesofact-core = { path = "../mesofact", version = "0.8.20" }
mesofact-ssr = { path = "../mesofact-ssr", version = "0.8.20" }
mesofact-render = { path = "../mesofact-render", version = "0.8.20" }

# W272 bundle-manifest types (R599-F1), across the yah-base workspace boundary.
# default-features = false keeps this to serde+blake3+toml types only — the
# object-store `store` feature is for cloud/kamaji, not the build side.
yah-mesofact-bundle = { path = "../../../yah-base/crates/mesofact-bundle", default-features = false }

rolldown = "1.1"
rolldown_common = "1.1"
lightningcss = "1.0.0-alpha.71"

anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
toml = "0.8"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
