[package]
name = "mesofact-dev"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Local dev server for mesofact-static workloads — axum + dist/html/ + 404.html fallback. Backs the local-static provider slot; reusable by the cloud reconciler and downstream consumers."

[lib]
path = "src/lib.rs"

[[bin]]
name = "mesofact-dev"
path = "src/main.rs"

[[bin]]
name = "mesofact-serve"
path = "src/serve.rs"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "process", "time", "sync", "io-util", "net"] }
# Dev-tier S3 surface (R490-F7): FS-backed s3s-fs so a workload's
# @mesofact/runtime R2Adapter resolves against a local bucket in `bun run dev`.
# Apache-2.0; resolves cleanly here (the R274-F5 sha1/iroh-relay conflict is
# camp-only — absent from mesofact-dev's tree).
s3s = "0.13"
s3s-fs = "0.13"
hyper-util = { version = "0.1", features = ["server", "tokio", "http1"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
mesofact-ssr = { path = "../mesofact-ssr" }
futures = "0.3"
# HTTP client for the same-origin reverse proxy (R513-F10) and the dev S3
# round-trip test. Loopback http://127.0.0.1 only — no TLS feature.
reqwest = { version = "0.12", default-features = false }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
