[package]
name = "mesofact-publisher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Publisher for mesofact: build → R2 upload → manifest swap → CDN purge"
readme = "README.md"
keywords = ["web", "static-site", "r2", "cdn"]
categories = ["web-programming"]

[lib]
name = "mesofact_publisher"
path = "src/lib.rs"

[[bin]]
name = "mesofact-publish"
path = "src/bin/mesofact-publish.rs"

[dependencies]
mesofact = { path = "../mesofact", version = "0.8.20" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
bytes = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util", "sync"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
percent-encoding = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
